--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
   "workspaces": [
     "apps/*",
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "@tailwindcss/postcss": "^4.0.3",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^4.0.3"
+  }
 }
