--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,20 +1,13 @@
 {
   "name": "@repo/db",
   "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "devDependencies": {
     "prisma": "^6.3.1"
   },
   "dependencies": {
     "@prisma/client": "^6.3.1"
   },
-  "export": {
-    "./client": "./src/index.ts"
+  "exports": {
+    "./client": "./index.ts"
   }
 }
