--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -5,7 +5,8 @@
   "exports": {
     "./button": "./src/button.tsx",
     "./card": "./src/card.tsx",
-    "./code": "./src/code.tsx"
+    "./code": "./src/code.tsx",
+    "./appbar": "./src/appbar.tsx"
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
@@ -22,7 +23,10 @@
     "typescript": "5.7.3"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.0.3",
+    "postcss": "^8.5.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^4.0.3"
   }
 }
