--- a/apps/bank-webhook-handler/package.json
+++ b/apps/bank-webhook-handler/package.json
@@ -10,7 +10,6 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@types/express": "^5.0.0",
-    "zod": "^3.24.1"
+    "@types/express": "^5.0.0"
   }
 }
